<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:background="@color/white">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textSize="@dimen/_32ssp"
        android:textColor="@color/red"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_64sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sbtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle3"
        android:textSize="@dimen/_24ssp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:textStyle="bold" />

    <!--Full Name-->
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/full_name"
        android:background="@drawable/background_rounded_lightred"
        android:inputType="textPersonName"
        android:hint="@string/full_name"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_16sdp"/>

    <!--Email-->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/email"
        android:background="@drawable/background_rounded_lightred"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_16sdp"/>

    <!--Password-->
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/password"
        android:background="@drawable/background_rounded_lightred"
        android:drawableEnd="@drawable/baseline_visibility_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_12sdp"
        android:textSize="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_16sdp"/>

    <!--Confirm Password-->
    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/passwordConfirm"
        android:inputType="textPassword"
        android:background="@drawable/background_rounded_lightred"
        android:drawableEnd="@drawable/baseline_visibility_24"
        android:hint="@string/passwordConfirm"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_32sdp" />

    <!--Button Register-->
    <Button
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/background_rounded_red"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="@dimen/_12sdp"
        android:textSize="@dimen/_16ssp"
        style="@android:style/Widget.Button"/>

    <!--Login-->
    <TextView
        android:id="@+id/txLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login2"
        android:textSize="@dimen/_12ssp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"/>

</LinearLayout>
