<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/ttText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title2"
        android:textSize="@dimen/_32ssp"
        android:textColor="@color/red"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_64sdp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/sbtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle3"
        android:textSize="@dimen/_20ssp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_16sdp"/>


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/background_rounded_lightred"
        android:inputType="textPersonName"
        android:hint="@string/username"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_12sdp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/background_rounded_lightred"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_12sdp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/background_rounded_lightred"
        android:drawableEnd="@drawable/baseline_visibility_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_12sdp"
        android:textSize="@dimen/_12sdp" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:inputType="textPassword"
        android:background="@drawable/background_rounded_lightred"
        android:hint="@string/passwordConfirm"
        android:textSize="@dimen/_12sdp"
        android:padding="@dimen/_12sdp"
        android:drawableEnd="@drawable/baseline_visibility_24"/>

    <Button
        android:id="@+id/btRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded_red"
        android:padding="@dimen/_12sdp"
        android:text="@string/register"
        android:textSize="@dimen/_16ssp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        style="@android:style/Widget.Button" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:padding="@dimen/_12sdp"
        android:text="@string/login2"
        android:textAllCaps="false"
        android:textSize="@dimen/_12ssp"
        android:textColor="@android:color/black"
        android:layout_gravity="center"/>

</LinearLayout>
