<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/ttText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_32sdp"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_20ssp"
        android:layout_marginTop="@dimen/_64sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/background_rounded_lightred"
        android:drawableEnd="@drawable/baseline_visibility_24"
        android:hint="@string/new_pw"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:padding="@dimen/_12sdp" />

    <EditText
        android:id="@+id/etRePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_32sdp"
        android:background="@drawable/background_rounded_lightred"
        android:drawableEnd="@drawable/baseline_visibility_24"
        android:hint="@string/passwordConfirm"
        android:textSize="@dimen/_12ssp"
        android:inputType="textPassword"
        android:padding="@dimen/_12sdp" />


    <Button
        android:id="@+id/btChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded_red"
        android:padding="@dimen/_12sdp"
        android:text="@string/change"
        android:textSize="@dimen/_16ssp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        style="@android:style/Widget.Button" />

</LinearLayout>
