<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    android:background="@color/white">

    <TextView
        android:id="@+id/ttText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_64sdp"
        android:layout_marginBottom="@dimen/_32sdp"
        android:text="@string/input_email"
        android:textColor="@color/black"
        android:textSize="@dimen/_20ssp"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="@dimen/_12sdp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_12ssp"
        android:background="@drawable/background_rounded_lightred"
        android:padding="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_32sdp"/>

    <Button
        android:id="@+id/btNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="@dimen/_16ssp"
        android:padding="@dimen/_12sdp"
        android:background="@drawable/background_rounded_red"
        android:textColor="@color/white"
        style="@android:style/Widget.Button" />
</LinearLayout>
